<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.addstory.AddStoryActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/previewImageView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:shapeAppearance="@style/roundImageView"
        app:srcCompat="@drawable/img_addstory"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/pink"
        android:text="@string/camera"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/pink"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_camera"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:boxStrokeColor="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/storyDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/story_description"
            android:inputType="textMultiLine"
            android:maxLines="5"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/pink"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="@+id/descriptionEditTextLayout"
        app:layout_constraintStart_toStartOf="@+id/descriptionEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextLayout"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>