<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/pink"
    android:elevation="4dp">

    <ImageView
        android:id="@+id/toolbar_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_app_logo"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/action_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_logout"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <ImageView
        android:id="@+id/action_change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_language"
        tools:ignore="ContentDescription,ImageContrastCheck" />

</androidx.appcompat.widget.Toolbar>
